Adding Hands On Material

--- a/01_layout.html
+++ b/01_layout.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Portfolio</title>
-  </head>
-  <body>
-    <!-- Add your content here -->
-  </body>
+
+<head>
+  <!-- https://fonts.google.com/specimen/Sono -->
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Sono:wght@200&display=swap');
+  </style>
+
+  <!-- Scripts -->
+  <!-- Styles -->
+  <!-- Meta Tags -->
+  <title>My Portfolio</title>
+</head>
+
+<body>
+
+  <!-- Nav Bar -->
+  <!-- Hero Section -->
+  <!-- Skills Section -->
+  <!-- Experience Section -->
+  <!-- Projects Section -->
+  <!-- Contact Section -->
+</body>
+
 </html>
