Adding lab for session 02

--- a/01_layout.html
+++ b/01_layout.html
@@ -8,9 +8,9 @@
     @import url('https://fonts.googleapis.com/css2?family=Sono:wght@200&display=swap');
   </style>
 
-  <!-- Scripts -->
-  <!-- Styles -->
-  <!-- Meta Tags -->
+  <!-- Scripts ( Explain about scripts) -->
+  <!-- Styles ( Explain about styles)-->
+  <!-- Meta Tags ( Explain about meta tags)-->
   <title>My Portfolio</title>
 </head>
 
